# statusbar_hid_battery_info

./: .gitignore  README.md  makefile  pyproject.toml  statusbar_hid_battery_info_app.py
src/statusbar_hid_battery_info/: __init__.py  agent.py  app.py  config.py  device.py  updater.py  util.py
src/statusbar_hid_battery_info/resources/: app.icns
tests/: test_util.py
