[tool.poetry]
name = "statusbar-hid-battery-info"
version = "0.1.0"
description = "Bluetooth HID battery indicator and notifier"
authors = ["derfryday <contact@fryday.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rumps = "^0.4.0"
orjson = "^3.9.5"
requests = "^2.31.0"
macos-notifications = "^0.1.6"

[tool.poetry.group.dev.dependencies]
nuitka = "^1.7.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
